# library-api

./: .gitignore  README.md  pyproject.toml  pytest.ini
api/: admin.py  urls.py
api/exceptions/: api_custom_exception.py  api_exception.py
api/exceptions/books/: book_not_found_api_exception.py
api/exceptions/managment_commands_exceptions/: file_does_not_have_csv_extension_exception.py  file_not_found.py
api/factories/: author_model_factory.py
api/management/: management_enum.py
api/management/commands/: import_authors.py
api/migrations/: 0001_initial.py  0002_auto_20211104_1935.py  0003_rename_authordtomodel_authormodel.py  0004_bookmodel.py
api/models/: __init__.py  author_dto_model.py  author_model.py  book_model.py
api/repositories/: django_author_repository.py  django_book_repository.py
api/serializers/: author_creation_dto_serializer.py  author_dto_serializer.py  author_input_dto_serializer.py  author_output_dto_serializer.py  book_creation_dto_serializer.py  book_dto_serializer.py
api/views/: author_view.py  authors_view.py  base_author_view.py  list_authors_view.py  read_author_view.py
domain/: settings.py
domain/entities/: __init__.py  value_object.py
domain/exceptions/: __init__.py  domain_exception.py  validation_exception.py
domain/factories/: __init__.py  author_factory.py  book_factory.py
domain/repositories/: __init__.py  author_repository.py  book_repository.py
domain/services/: __init__.py  get_author_by_id_service.py  save_author_service.py
library_api/: settings.py  urls.py
shared/: basic_exception.py  value_object.py
(+94 files in other folders)
